<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfiguracoesActivity">

    <TextView
        android:id="@+id/qtdDadosTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/qtdDados"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/tipoCalculadoraRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/avancadoRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/umDado" />

        <RadioButton
            android:id="@+id/basicaRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doisDados" />

    </RadioGroup>


    <TextView
        android:id="@+id/qtdFacesTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/qtdFaces"
        android:textSize="25sp" />

    <Button
        android:id="@+id/salvarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/salvar" />

</LinearLayout>